# Haskell-HW

./: .gitignore  README.md
hw1-B1boid/fp-homework/hw1/: hw1.cabal
hw1-B1boid/fp-homework/hw1/src/: Task1.hs  Task2.hs  Task3and4.hs  Task5.hs  Task6.hs  Task7.hs
hw1-B1boid/fp-homework/hw1/test/: Spec.hs  Task1Spec.hs  Task2Spec.hs  Task3and4Spec.hs  Task5Spec.hs  Task6Spec.hs  Task7Spec.hs
hw2-B1boid/: hw2-B1boid.cabal
hw2-B1boid/src/: Block1.hs  Block2.hs  Block3.hs
hw2-B1boid/test/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Spec.hs
hw3-B1boid/: README.md  hw3-B1boid.cabal
hw3-B1boid/app/: Main.hs
hw3-B1boid/src/: FSException.hs  FSInit.hs  FSSave.hs  FSTypes.hs  FileSystem.hs  Parser.hs
hw3-B1boid/test/: FSExample.hs  FileSystemSpec.hs  ParserSpec.hs  Spec.hs
hw4-B1boid/: hw4-B1boid.cabal  package.yaml
hw4-B1boid/app/: Main.hs
hw4-B1boid/benchmark/: Main.hs  Task1Bench.hs  Task3Bench.hs
hw4-B1boid/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw4-B1boid/test/: Spec.hs  Task1Spec.hs  Task4Spec.hs  Task5Spec.hs  Task6Spec.hs  Task7Spec.hs
hw4-B1boid/test/testExampleDir/: exampleFile
hw4-B1boid/test/testExampleDir/exampleSubDir/: exampleFile2
